# TUeLaneTracker

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Doxyfile  LICENSE  LICENSE.md  Log_StateMachine  Makefile  README.md
3rdPartyLibs/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
CameraCalibrator/: CMakeLists.txt  main.cpp  main_BRYAN.cpp  main_BUMBLEBEE.cpp  main_LOGITECH_C920.cpp
CameraCallibrator/: CMakeLists.txt
ConfigFiles/Camera/: BUMBLEBEE_640x480.yaml  LOGITECH_C920_640x480.yaml
Docs/: MainPage.h
Docs/html/: BufferingDAG__generic_8h_source.html  BufferingState_8h_source.html  Camera_8h_source.html  Car_8h_source.html  InitState_8h_source.html  LaneFilter_8h_source.html  Lane_8h_source.html  MainPage_8h_source.html  ScalingFactors_8h_source.html  StateMachine_8h_source.html  State_8h_source.html  Templates_8h_source.html  TrackingLaneDAG__generic_8h_source.html  TrackingLaneState_8h_source.html  VanishingPtFilter_8h_source.html  advanced.html  annotated.html  classBufferingDAG__generic-members.html  classBufferingDAG__generic.html  classBufferingState-members.html  classBufferingState.html  classInitState-members.html  classInitState.html  classLaneFilter-members.html  classLaneFilter.html  classState-members.html  classState.html  classStateMachine-members.html  classStateMachine.html  classTrackingLaneDAG__generic-members.html  classTrackingLaneDAG__generic.html  classTrackingLaneState-members.html  classTrackingLaneState.html  classVanishingPtFilter-members.html  classVanishingPtFilter.html  classes.html  dir_37fd67725d2892884bfc6be7d2d80071.html  dir_68ef9a2fb26cb54f66127d406cfcf22e.html  dir_9a80a04cf3c7015b26d1275d9aafcc74.html  (+33 more)
GeneratedFcns/: GeneratedFcns.mk  GeneratedFcns.project  GeneratedFcns.txt  createTemplate.cpp  createTemplate_data.cpp  createTemplate_emxAPI.cpp  createTemplate_emxutil.cpp  createTemplate_initialize.cpp  createTemplate_terminate.cpp  isrow.cpp  morphopAlgo.cpp  round.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp
InitState/: InitStateLDT.mk  InitStateLDT.project  InitStateLDT.txt  buildInfo.mat  codeInfo.mat  createTemplate.cpp  createTemplate.h  gcGuiReport.mat  isrow.cpp  isrow.h  morphopAlgo.cpp  morphopAlgo.h  round.cpp  round.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  run_Init_State.cpp  run_Init_State.h  run_Init_State_data.cpp  run_Init_State_data.h  run_Init_State_emxAPI.cpp  run_Init_State_emxAPI.h  run_Init_State_emxutil.cpp  run_Init_State_emxutil.h  run_Init_State_initialize.cpp  run_Init_State_initialize.h  run_Init_State_rtw.mk  run_Init_State_rtwutil.cpp  run_Init_State_rtwutil.h  run_Init_State_terminate.cpp  run_Init_State_terminate.h  run_Init_State_types.h
LaneTrackerApp/: .gitignore  CMakeLists.txt  CMakeLists.txt~  LaneTrackerApp.mk  LaneTrackerApp.mk~  LaneTrackerApp.txt  Log_Buffering  Log_StateMachine  Profile_ExecutionTime  main.cpp  main.cpp~
LaneTrackerApp/include/: MainPage.h
MatlabModule/: MatlabExe.mk  MatlabExe.project  main.cpp  main.h
ProfilerTestApp/: LDT_profiler.cpp  ProfilerTestApp.mk  ProfilerTestApp.project  ProfilerTestApp.txt  main.cpp
RTMapsApp/: CMakeLists (another copy).txt  CMakeLists.txt
RTMapsApp/local_interfaces/: SMA.h  maps_Kalman.h  maps_LaneTracker.h  maps_MovingAverage.h  maps_ParamViewer.h  maps_SelectOutput.h  maps_SelectTracker.h
RTMapsApp/src/: maps_Kalman.cpp  maps_LaneTracker.cpp  maps_MovingAverage.cpp  maps_ParamViewer.cpp  maps_SelectOutput.cpp  maps_SelectTracker.cpp  time_measure.cpp
TUeLDT/: .ac19f5_BufferingState.cpp.d  .ac19f5_Camera.cpp.d  .ac19f5_Car.cpp.d  .ac19f5_ChannelsSplitter.cpp.d  .ac19f5_ColorTransformer.cpp.d  .ac19f5_GaussianPreProcessor.cpp.d  .ac19f5_GradientExtractor.cpp.d  .ac19f5_InitState.cpp.d  .ac19f5_LDT_logger.cpp.d  .ac19f5_LDT_profiler.cpp.d  .ac19f5_Lane.cpp.d  .ac19f5_LaneFilter.cpp.d  .ac19f5_LaneObservation.cpp.d  .ac19f5_MaxPoolingProcessor.cpp.d  .ac19f5_SigInit.cpp.d  .ac19f5_State.cpp.d  .ac19f5_StateMachine.cpp.d  .ac19f5_TemplatesExtractor.cpp.d  .ac19f5_VanishingPtFilter.cpp.d  .dd5826_BufferingDAG.cpp.d  .dd5826_BufferingState.cpp.d  .dd5826_Camera.cpp.d  .dd5826_Car.cpp.d  .dd5826_ChannelsSplitter.cpp.d  .dd5826_ColorTransformer.cpp.d  .dd5826_DCU.cpp.d  .dd5826_GaussianPreProcessor.cpp.d  .dd5826_GradientExtractor.cpp.d  .dd5826_InitState.cpp.d  .dd5826_LDT_logger.cpp.d  .dd5826_LDT_profiler.cpp.d  .dd5826_Lane.cpp.d  .dd5826_LaneFilter.cpp.d  .dd5826_LaneMarkerProbabilities.cpp.d  .dd5826_LaneObservation.cpp.d  .dd5826_MaxPoolingProcessor.cpp.d  .dd5826_NcursesTUI.cpp.d  .dd5826_SigInit.cpp.d  .dd5826_State.cpp.d  .dd5826_StateMachine.cpp.d  (+86 more)
TUeLDT/include/: BufferingDAG_generic.h  BufferingState  BufferingState.cpp  BufferingState.h  Camera.cpp  Camera.h  Car.h  ChannelsMerger.h  ChannelsSplitter.h  ColorTransformer.h  DetectingEgoLane.h  FillingBuffer.h  FrameFeeder.h  FrameRenderer.h  GaussianPreProcessor.cpp  GaussianPreProcessor.h  GradientsExtractor.h  Histogram.h  HistogramModels.h  InitState.h  Init_State.h  LDT_logger.h  LDT_profiler.h  Lane.h  LaneFilter.h  LaneFilters.h  LaneModel.h  LaneObservation.h  MaxPoolingProcessor.h  NcursesTUI.h  ParallelForBodies.h  ResetState.h  RosPublisher.h  ScalingFactors.h  State.h  StateMachine.h  States.h  Templates.h  TemplatesExtractor.h  TrackingLaneDAG_generic.h  (+7 more)
UnitTests/: BootingStateTests.cpp  BootingStateTests.h  BufferingStateTests.cpp  BufferingStateTests.h  ImageTests.cpp  LaneFilterTests.cpp  SAMPLE.cpp  Tests.h  Tests_TueLDT.cpp  TrackingStateTests.cpp  TrackingStateTests.h  TrackingTests.cpp  TrackingTests.h  TrackingTests.h~  UnitTests.mk  UnitTests.txt  main.cpp  vpFilterTests.cpp  vpFilterTests.cpp~
include/: Config.h  LDT_logger.h  LDT_profiler.h  SigInt.h  common_config_time_measure.h  common_stringify_macros.h  common_time_measure.h  compileConfig.h
install/: .gitignore  TUeLaneTracker.avi
temp/: LDT_logger.cpp  LDT_profiler.cpp  StateMachine.cpp  TUeLDT.txt  TrackingLaneState.cpp  TrackingLanesDAG_generic.cpp  VanishingPtFilter.cpp
(+195 files in other folders)
